bug 375750. don't recreate CGFontRefs every time we draw -- cache them.  fixes multiple embeddings of fonts when drawing to a quartz print surface.  r=vlad a=schrep